--- a/modules/integration/tests-common/integration-test-utils/pom.xml
+++ b/modules/integration/tests-common/integration-test-utils/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>SecVerifier</artifactId>
-            <version>${carbon.platform.version}</version>
+            <version>${carbon.kernel.version}</version>
             <type>aar</type>
         </dependency>
         <!--<dependency>-->
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.tomcat</artifactId>
-            <version>${carbon.platform.version}</version>
+            <version>${carbon.kernel.version}</version>
         </dependency>
 
         <dependency>
@@ -151,7 +151,7 @@
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.authenticator.stub</artifactId>
-            <version>4.3.0-SNAPSHOT</version>
+            <version>${carbon.kernel.version}</version>
         </dependency>
         <dependency>
             <groupId>org.wso2.cep</groupId>
