--- a/modules/integration/tests-integration/tests/pom.xml
+++ b/modules/integration/tests-integration/tests/pom.xml
@@ -266,7 +266,7 @@
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>SecVerifier</artifactId>
-            <version>${carbon.platform.version}</version>
+            <version>${carbon.kernel.version}</version>
             <type>aar</type>
         </dependency>
         <dependency>
@@ -345,7 +345,7 @@
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.tomcat</artifactId>
-            <version>${carbon.platform.version}</version>
+            <version>${carbon.kernel.version}</version>
         </dependency>
 
         <dependency>
@@ -400,7 +400,7 @@
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.authenticator.stub</artifactId>
-            <version>4.3.0-SNAPSHOT</version>
+            <version>${carbon.kernel.version}</version>
         </dependency>
 
         <dependency>
