--- a/modules/integration/tests-common/ui-pages/pom.xml
+++ b/modules/integration/tests-common/ui-pages/pom.xml
@@ -37,23 +37,14 @@
              <groupId>org.seleniumhq.selenium</groupId>
              <artifactId>selenium-java</artifactId>
              <scope>compile</scope>
-             <exclusions>
-                 <exclusion>
-                     <groupId>org.seleniumhq.selenium</groupId>
-                     <artifactId>selenium-android-driver</artifactId>
-                 </exclusion>
-             </exclusions>
          </dependency>
          <dependency>
              <groupId>com.opera</groupId>
              <artifactId>operadriver</artifactId>
-             <scope>compile</scope>
-             <exclusions>
-                 <exclusion>
-                     <groupId>org.seleniumhq.selenium</groupId>
-                     <artifactId>selenium-remote-driver</artifactId>
-                 </exclusion>
-             </exclusions>
+         </dependency>
+         <dependency>
+             <groupId>org.apache.log4j.wso2</groupId>
+             <artifactId>log4j</artifactId>
          </dependency>
      </dependencies>
 </project>
