--- a/modules/org.wso2.stratos.cep.dashboard.ui/pom.xml
+++ b/modules/org.wso2.stratos.cep.dashboard.ui/pom.xml
@@ -71,7 +71,7 @@
         </dependency>
 
         <dependency>
-            <groupId>log4j</groupId>
+            <groupId>org.apache.log4j.wso2</groupId>
             <artifactId>log4j</artifactId>
         </dependency>
         <dependency>
@@ -81,20 +81,14 @@
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.ui</artifactId>
-            <version>${carbon.kernel.version}</version>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.statistics.ui</artifactId>
-            <version>4.3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
         </dependency>
     </dependencies>
-    <properties>
-         <!--<registry-component.version>4.0.0</registry-component.version>-->
-         <!--<governance-component.version>4.0.0</governance-component.version>-->
-    </properties>
 </project>
