--- a/modules/samples/producers/pizza-shop/pom.xml
+++ b/modules/samples/producers/pizza-shop/pom.xml
@@ -27,7 +27,6 @@
         <version>4.0.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.wso2.cep</groupId>
     <artifactId>pizza-shop-client</artifactId>
     <name>WSO2 CEP - Producer - Pizza Shop Clients</name>
 
@@ -41,19 +40,16 @@
             <artifactId>axiom</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon</groupId>
+            <groupId>org.wso2.carbon.commons</groupId>
             <artifactId>org.wso2.carbon.databridge.agent.thrift</artifactId>
-            <version>4.3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon</groupId>
+            <groupId>org.wso2.carbon.commons</groupId>
             <artifactId>org.wso2.carbon.databridge.commons</artifactId>
-            <version>4.3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon</groupId>
+            <groupId>org.wso2.carbon.commons</groupId>
             <artifactId>org.wso2.carbon.databridge.commons.thrift</artifactId>
-            <version>4.3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents.wso2</groupId>
@@ -63,13 +59,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents.wso2</groupId>
             <artifactId>httpcore</artifactId>
-            <version>4.3.0.wso2v1</version>
         </dependency>
     </dependencies>
-
-    <properties>
-        <jsmpp-version>2.0.1</jsmpp-version>
-        <httpclient.wso2.version>4.2.5.wso2v1</httpclient.wso2.version>
-    </properties>
 
 </project>
