--- a/modules/samples/producers/service-stats/pom.xml
+++ b/modules/samples/producers/service-stats/pom.xml
@@ -27,26 +27,22 @@
         <version>4.0.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.wso2.cep</groupId>
     <artifactId>service-stats-client</artifactId>
     <name>WSO2 CEP - Producer - Service Stats Clients</name>
 
 
     <dependencies>
         <dependency>
-            <groupId>org.wso2.carbon</groupId>
+            <groupId>org.wso2.carbon.commons</groupId>
             <artifactId>org.wso2.carbon.databridge.agent.thrift</artifactId>
-            <version>4.3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon</groupId>
+            <groupId>org.wso2.carbon.commons</groupId>
             <artifactId>org.wso2.carbon.databridge.commons</artifactId>
-            <version>4.3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon</groupId>
+            <groupId>org.wso2.carbon.commons</groupId>
             <artifactId>org.wso2.carbon.databridge.commons.thrift</artifactId>
-            <version>4.3.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
