--- a/modules/features/pom.xml
+++ b/modules/features/pom.xml
@@ -22,13 +22,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <groupId>org.wso2.cep</groupId>
-    	<artifactId>cep-parent</artifactId>
+    	<artifactId>wso2cep-parent</artifactId>
     	<version>4.0.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>cep-features-parent</artifactId>
+    <artifactId>wso2cep-features-parent</artifactId>
     <packaging>pom</packaging>
     <name>WSO2 CEP - Feature Parent</name>
     <url>http://wso2.org/projects/cep/java</url>
