--- a/modules/features/product/pom.xml
+++ b/modules/features/product/pom.xml
@@ -23,13 +23,13 @@
 
     <parent>
         <groupId>org.wso2.cep</groupId>
-    	<artifactId>cep-features-parent</artifactId>
+    	<artifactId>wso2cep-features-parent</artifactId>
         <version>4.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>cep-features</artifactId>
+    <artifactId>wso2cep-features</artifactId>
     <packaging>pom</packaging>
     <name>WSO2 CEP - Features </name>
     <description>Features specific to the WSO2 CEP</description>
