--- a/modules/org.wso2.stratos.cep.login.ui/pom.xml
+++ b/modules/org.wso2.stratos.cep.login.ui/pom.xml
@@ -21,7 +21,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <groupId>org.wso2.cep</groupId>
-    	<artifactId>cep-parent</artifactId>
+    	<artifactId>wso2cep-parent</artifactId>
     	<version>4.0.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
