--- a/modules/features/service/pom.xml
+++ b/modules/features/service/pom.xml
@@ -23,7 +23,7 @@
 
     <parent>
         <groupId>org.wso2.cep</groupId>
-    	<artifactId>cep-features-parent</artifactId>
+    	<artifactId>wso2cep-features-parent</artifactId>
         <version>4.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
