--- a/pom.xml
+++ b/pom.xml
@@ -606,8 +606,8 @@
 
     <properties>
         <!--CEP versions-->
-        <jaggery.version>0.9.0-Alpha6</jaggery.version>
-        <jaggery.modules.version>0.9.0-Alpha6</jaggery.modules.version>
+        <jaggery.version>0.9.0.ALPHA6</jaggery.version>
+        <jaggery.modules.version>0.9.0.ALPHA6</jaggery.modules.version>
         <carbon.deployment.version>4.3.0</carbon.deployment.version>
         <carbon.commons.version>4.3.2</carbon.commons.version>
         <carbon.identity.version>4.3.1</carbon.identity.version>
