change apache axiom dependency to wso2 orbit dependency

--- a/modules/samples/producers/flight-stats/pom.xml
+++ b/modules/samples/producers/flight-stats/pom.xml
@@ -36,8 +36,8 @@
             <artifactId>geronimo-jms_1.1_spec</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.ws.commons.axiom</groupId>
-            <artifactId>axiom-api</artifactId>
+            <groupId>org.apache.ws.commons.axiom.wso2</groupId>
+            <artifactId>axiom</artifactId>
         </dependency>
     </dependencies>
 
