--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+            <dependency>
+                <groupId>org.wso2.cep</groupId>
+                <artifactId>org.wso2.stratos.cep.dashboard.ui</artifactId>
+                <version>${cep.version}</version>
+            </dependency>
 
             <!--Carbon-event-processing-->
             <dependency>
@@ -261,6 +266,17 @@
                 <artifactId>rampart</artifactId>
                 <version>${rampart.wso2.version}</version>
                 <type>mar</type>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon</groupId>
+                <artifactId>org.wso2.carbon.ui.menu.stratos</artifactId>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.wso2.carbon</groupId>
+                        <artifactId>org.wso2.carbon.statistics.ui</artifactId>
+                    </exclusion>
+                </exclusions>
+                <version>${stratos.ui.version}</version>
             </dependency>
 
             <!--Carbon commons-->
@@ -606,7 +622,7 @@
 
     <properties>
         <!--CEP versions-->
-        <jaggery.version>0.9.0.ALPHA6</jaggery.version>
+        <jaggery.version>0.9.0</jaggery.version>
         <jaggery.modules.version>0.9.0.ALPHA6</jaggery.modules.version>
         <carbon.deployment.version>4.3.0</carbon.deployment.version>
         <carbon.commons.version>4.3.2</carbon.commons.version>
@@ -616,24 +632,25 @@
         <carbon.multitenancy.version>4.3.0</carbon.multitenancy.version>
         <carbon.governance.version>4.3.0</carbon.governance.version>
         
-        <siddhi.version>3.0.0-SNAPSHOT</siddhi.version>
+        <!--<siddhi.version>3.</siddhi.version>-->
         <cep.version>4.0.0-SNAPSHOT</cep.version>
-        <carbon.event-processing.version>2.0.1</carbon.event-processing.version>
+        <carbon.event-processing.version>2.0.2-SNAPSHOT</carbon.event-processing.version>
 
         <!-- Carbon kernel version-->
         <carbon.kernel.version>4.3.0</carbon.kernel.version>
-        <carbon.kernel.imp.pkg.version>[4.3.0, 4.4.0)</carbon.kernel.imp.pkg.version>
-        <carbon.kernel.registry.imp.pkg.version>[1.0.1, 2.0.0)</carbon.kernel.registry.imp.pkg.version>
+        <!--<carbon.kernel.imp.pkg.version>[4.3.0, 4.4.0)</carbon.kernel.imp.pkg.version>-->
+        <!--<carbon.kernel.registry.imp.pkg.version>[1.0.1, 2.0.0)</carbon.kernel.registry.imp.pkg.version>-->
         <carbon.p2.plugin.version>1.5.3</carbon.p2.plugin.version>
 
         <!--WSO2 versions-->
+        <stratos.ui.version>2.2.0</stratos.ui.version>
         <rampart.wso2.version>1.6.1.wso2v13</rampart.wso2.version>
-        <bcel.version>5.2.0.wso2v1</bcel.version>
-        <asm.version>3.1.wso2v1</asm.version>
-        <cglib.version>2.2.wso2v1</cglib.version>
-        <axis2.jibx.version>1.6.0.wso2v1</axis2.jibx.version>
-        <jibx.version>1.2.1.wso2v1</jibx.version>
-        <axis2.jaxb.version>1.6.0.wso2v1</axis2.jaxb.version>
+        <!--<bcel.version>5.2.0.wso2v1</bcel.version>-->
+        <!--<asm.version>3.1.wso2v1</asm.version>-->
+        <!--<cglib.version>2.2.wso2v1</cglib.version>-->
+        <!--<axis2.jibx.version>1.6.0.wso2v1</axis2.jibx.version>-->
+        <!--<jibx.version>1.2.1.wso2v1</jibx.version>-->
+        <!--<axis2.jaxb.version>1.6.0.wso2v1</axis2.jaxb.version>-->
         <axis2.version>1.6.1.wso2v11</axis2.version>
         <orbit.version.axiom>1.2.11.wso2v5</orbit.version.axiom>
         <version.commons.logging>1.1</version.commons.logging>
@@ -648,10 +665,10 @@
         <emma.version>2.1.5320</emma.version>
         <javax.servlet.jsp.version>2.0.0.v200706191603</javax.servlet.jsp.version>
         <version.equinox.http.servlet>2.2.2</version.equinox.http.servlet>
-        <apache.derby.version>10.3.2.1wso2v1</apache.derby.version>
+        <!--<apache.derby.version>10.3.2.1wso2v1</apache.derby.version>-->
         <version.equinox.osgi.services>3.3.100.v20120522-1822</version.equinox.osgi.services>
-        <hibernate.version>3.2.5.ga-wso2v1</hibernate.version>
-        <test-automation-framework-version>4.3.0-SNAPSHOT</test-automation-framework-version>
+        <!--<hibernate.version>3.2.5.ga-wso2v1</hibernate.version>-->
+        <!--<test-automation-framework-version>4.3.0-SNAPSHOT</test-automation-framework-version>-->
 
         <operadriver.version>0.8.1</operadriver.version>
         <selenium.version>2.40.0</selenium.version>
