--- a/pom.xml
+++ b/pom.xml
@@ -529,8 +529,8 @@
         <jaggery.version>0.9.0</jaggery.version>
         <jaggery.modules.version>0.9.0.ALPHA6</jaggery.modules.version>
         <carbon.deployment.version>4.3.0</carbon.deployment.version>
-        <carbon.commons.version>4.3.2</carbon.commons.version>
-        <carbon.identity.version>4.3.0</carbon.identity.version>
+        <carbon.commons.version>4.3.3</carbon.commons.version>
+        <carbon.identity.version>4.3.2-SNAPSHOT</carbon.identity.version>
         <carbon.registry.version>4.3.0</carbon.registry.version>
         <carbon.storagemgt.version>4.3.0</carbon.storagemgt.version>
         <carbon.multitenancy.version>4.3.0</carbon.multitenancy.version>
