--- a/modules/distribution/pom.xml
+++ b/modules/distribution/pom.xml
@@ -68,7 +68,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.8</version>
                 <inherited>false</inherited>
                 <executions>
                     <execution>
@@ -220,7 +219,8 @@
 
 
                                 <!-- Sign all the jars in the distribution -->
-                                <taskdef resource="net/sf/antcontrib/antcontrib.properties" classpathref="maven.plugin.classpath"/>
+                                <taskdef resource="net/sf/antcontrib/antcontrib.properties"
+                                         classpathref="maven.plugin.classpath"/>
                                 <if>
                                     <equals arg1="${profile}" arg2="signJar"/>
                                     <then>
@@ -277,7 +277,6 @@
                     </execution>
                 </executions>
             </plugin>
-
 
 
             <plugin>
