--- a/pom.xml
+++ b/pom.xml
@@ -528,12 +528,12 @@
         <!--CEP versions-->
         <jaggery.version>0.9.0</jaggery.version>
         <jaggery.modules.version>0.9.0.ALPHA6</jaggery.modules.version>
-        <carbon.deployment.version>4.3.0</carbon.deployment.version>
+        <carbon.deployment.version>4.3.1-SNAPSHOT</carbon.deployment.version>
         <carbon.commons.version>4.3.3</carbon.commons.version>
         <carbon.identity.version>4.3.2-SNAPSHOT</carbon.identity.version>
         <carbon.registry.version>4.3.0</carbon.registry.version>
-        <carbon.storagemgt.version>4.3.0</carbon.storagemgt.version>
-        <carbon.multitenancy.version>4.3.0</carbon.multitenancy.version>
+        <carbon.storagemgt.version>4.3.1-SNAPSHOT</carbon.storagemgt.version>
+        <carbon.multitenancy.version>4.3.3-SNAPSHOT</carbon.multitenancy.version>
         <carbon.governance.version>4.3.0</carbon.governance.version>
         
         <!--<siddhi.version>3.</siddhi.version>-->
@@ -548,7 +548,7 @@
 
         <!--WSO2 versions-->
         <stratos.ui.version>2.2.0</stratos.ui.version>
-        <rampart.wso2.version>1.6.1.wso2v13</rampart.wso2.version>
+        <rampart.wso2.version>1.6.1-wso2v13</rampart.wso2.version>
         <axis2.version>1.6.1.wso2v11</axis2.version>
         <orbit.version.axiom>1.2.11.wso2v5</orbit.version.axiom>
         <version.commons.logging>1.1</version.commons.logging>
