--- a/pom.xml
+++ b/pom.xml
@@ -528,12 +528,12 @@
         <!--CEP versions-->
         <jaggery.version>0.9.0</jaggery.version>
         <jaggery.modules.version>0.9.0.ALPHA6</jaggery.modules.version>
-        <carbon.deployment.version>4.3.1-SNAPSHOT</carbon.deployment.version>
-        <carbon.commons.version>4.3.3</carbon.commons.version>
-        <carbon.identity.version>4.3.2-SNAPSHOT</carbon.identity.version>
+        <carbon.deployment.version>4.3.1</carbon.deployment.version>
+        <carbon.commons.version>4.3.4</carbon.commons.version>
+        <carbon.identity.version>4.3.2</carbon.identity.version>
         <carbon.registry.version>4.3.0</carbon.registry.version>
-        <carbon.storagemgt.version>4.3.1-SNAPSHOT</carbon.storagemgt.version>
-        <carbon.multitenancy.version>4.3.3-SNAPSHOT</carbon.multitenancy.version>
+        <!--<carbon.storagemgt.version>4.3.1-SNAPSHOT</carbon.storagemgt.version>-->
+        <carbon.multitenancy.version>4.3.3</carbon.multitenancy.version>
         <carbon.governance.version>4.3.0</carbon.governance.version>
         
         <!--<siddhi.version>3.</siddhi.version>-->
